test/Fail/Issue783a.agda

record R : Set₁ where
  X = Y  -- should get error here
  field A : Set
