test/Fail/Issue783a.err
Issue783a.agda:3.7-8: error: [NotInScope]
Not in scope:
  Y at Issue783a.agda:3.7-8
when scope checking Y
